Fri Feb 13 09:43:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func_flock): using flock defined in
	  win32/win32.c on mingw.

Fri Feb 13 01:45:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_sequence, compile_dstr_fragments),
	  (iseq_compile_each): hides other internal objects.

	* compile.c (iseq_compile_each): just freeze xstr.

Fri Feb 13 00:48:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (defineclass): try to autoload const to be overridden.

Thu Feb 12 23:22:29 2009  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_socket.rb (test_udp_server): filter out unreachable
	  addresses.  [ruby-dev:37970]

Thu Feb 12 22:51:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (hide_obj): OBJ_FREEZE() is not an expression.  a patch
	  from nagachika <nagachika00 AT gmail.com> at [ruby-dev:37977].

	* compile.c (insn_set_sc_state): fixed typoe.

Thu Feb 12 12:36:35 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/basicsocket.c (bsock_getpeereid): implemented for Solaris
	  using getpeerucred.

	* ext/socket/extconf.rb: check ucred.h and getpeerucred.

	* ext/socket/rubysocket.h: include ucred.h if available.

Thu Feb 12 19:42:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_array_, defined_expr, iseq_compile_each): hide
	  and freeze internal literal objects, to prevent from modifying.
	  [ruby-dev:37959]

	* iseq.c (insn_operand_intern): copy internal literal objects.

	* insns.def (putstring, duparray): ditto.

	* string.c (rb_str_replace): exported.

Thu Feb 12 17:17:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_ungetc): calculates new position
	  before reallocation.  [Bug#1099]

Thu Feb 12 16:50:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: a patch to build on GNU/kOpenSolaris from Rober
	  Millan at [ruby-core:21888].

Thu Feb 12 15:28:04 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
