@@ -1,3 +1,10 @@
+Fri Feb 13 15:01:40 2009  Koichi Sasada  <ko1@atdot.net>
+
+	* cont.c (rb_fiber_alive_p): fix to return true instead of 1.
+	  [ruby-dev:37991]
+
+	* test/ruby/test_fiber.rb: add a test for Fiber#alive?
+
 Fri Feb 13 09:43:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (ac_cv_func_flock): using flock defined in
